[package]
name = "skia"
version = "0.1.0"
authors = ["Vlad Zhukov <vlad.zhukov@elektron.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# it uses develop branch in wich  use newer drm version
dri = {path = "../../"}

libc = "0.2"
skia-safe = { git = "https://github.com/Vurich/rust-skia.git", features = ["egl", "lottie", "textlayout"]}
